<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorMain"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity"
    android:background="@color/colorMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/pic"
            />
    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="3dp"
                android:text="Name: "
                android:textSize="8pt" />

            <TextView
                android:id="@+id/nameDisplayTextView"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_marginBottom="3dp"
                android:text="[name]"
                android:textSize="8pt" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="3dp"
                android:text="Age: "
                android:textSize="8pt" />

            <TextView
                android:id="@+id/ageDisplayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="3dp"
                android:text="[age]"
                android:textSize="8pt" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="3dp"
                android:text="Location: "
                android:textSize="8pt" />

            <TextView
                android:id="@+id/locationDisplayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="[click to edit location]"
                android:textSize="8pt" />


        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="3dp"
                android:text="Occupation: "
                android:textSize="8pt" />

            <TextView
                android:id="@+id/occupationDisplayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="3dp"
                android:text="[click to edit occupation]"
                android:textSize="8pt" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="3dp"
                android:text="Description: "
                android:textSize="8pt" />

            <TextView
                android:id="@+id/descriptionDisplayTextView"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="[click to edit description]"
                android:textSize="8pt" />

        </TableRow>


    </TableLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--<Button-->
            <!--android:id="@+id/goBackButton"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="100dp"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_gravity="bottom"-->
            <!--android:onClick="goToMainActivity"-->
            <!--android:text="Go Back" />-->


    </LinearLayout>


    </LinearLayout>

</ScrollView>
